--- a/shuishui/bin/AndroidManifest.xml
+++ b/shuishui/bin/AndroidManifest.xml
@@ -16,15 +16,19 @@
     <!-- 访问WIFI网络状态的权限 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" /><!-- read sim card test -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+ 	<!-- read sim card test -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-
+	
     <uses-feature android:name="android.hardware.wifi" />
-
+	<!--  camera open-->
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-feature android:name="android.hardware.camera" />
+	
     <application
         android:name=".application.Applications"
         android:allowBackup="true"
@@ -34,7 +38,7 @@
         <activity
             android:name=".activitys.InitActivity"
             android:label="@string/app_name" >
-              <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -74,12 +78,14 @@
         <activity
             android:name=".activitys.FragmentDemoActivity"
             android:label="@string/title_activity_fragment_demo" >
-           
         </activity>
         <activity
             android:name=".FragmentMainActivity"
             android:label="@string/title_activity_fragment_main" >
-           
+        </activity>
+        <activity
+            android:name="com.korewang.shuishui.activitys.CameraSettingActivity"
+            android:label="@string/title_activity_camera_setting" >
         </activity>
     </application>
 
