--- a/shuishui/bin/AndroidManifest.xml
+++ b/shuishui/bin/AndroidManifest.xml
@@ -49,6 +49,12 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
     <!-- 禁用硬件加速  android:hardwareAccelerated="false" -->
+    <!-- 单元测试 -->
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="com.korewang.shuishui" >
+    </instrumentation>
+
     <application
         android:name=".application.Applications"
         android:allowBackup="true"
@@ -60,7 +66,8 @@
                 <action android:name="com.shuishui.FIRST_SERVICE" />
             </intent-filter>
         </service>
-
+        <!--   unit test -->
+		<uses-library android:name="android.test.runner"/>
         <activity
             android:name=".activitys.InitActivity"
             android:label="@string/app_name" >
@@ -172,6 +179,12 @@
             android:name=".MatrixActivity"
             android:label="@string/title_activity_matrix" >
         </activity>
+
+        <provider
+            android:name="com.korewang.shuishui.unit_content_provider.StudentContentProvider"
+            android:authorities="com.korewang.shuishui.unit_content_provider.StudentContentProvider" >
+        </provider>
+        <!-- android:authorities   唯一标识 -->
     </application>
 
 </manifest>
